--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Waktu Alarm"
             android:id="@+id/tv_one_time_alarm_time"
             android:layout_marginBottom="@dimen/activity_vertical_margin"/>
     </LinearLayout>
@@ -93,7 +94,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_repeating_alarm_message"
+        android:id="@+id/edt_repeating_alarm_message"
         android:hint="Pesan Alarm"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         tools:ignore="HardcodedText" />
